--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node src/server.js",
     "start-dev": "./build-support/start-dev.sh",
     "deploy": "git push heroku master --force",
-    "heroku-postbuild": "babel src/server.js -o src/server.js"
+    "heroku-postbuild": "babel src/server.js -o src/server.js",
+    "test": "jest --verbose"
   },
   "dependencies": {
     "babel-cli": "^6.23.0",
@@ -18,9 +19,11 @@
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
     "pg": "^6.1.2",
-    "pg-promise": "^5.5.6"
+    "pg-promise": "^5.5.6",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
-    "babel-watch": "^2.0.6"
+    "babel-watch": "^2.0.6",
+    "jest": "^18.1.0"
   }
 }
