--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-env": "^1.1.8",
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
+    "newrelic": "^1.37.2",
     "pg": "^6.1.2",
     "pg-promise": "^5.5.6",
     "uuid": "^3.0.1"
